@@ -58,6 +58,7 @@
 #define SCOREP_CUDA_FEATURE_GPUMEMUSAGE         ( 1 << 9 )
 #define SCOREP_CUDA_FEATURE_FLUSHATEXIT         ( 1 << 10 )
 #define SCOREP_CUDA_FEATURE_REFERENCES          ( 1 << 11 )
+#define SCOREP_CUDA_FEATURE_DONTFLUSHATEXIT     ( 1 << 12 )
 #define SCOREP_CUDA_FEATURES_DEFAULT \
     ( SCOREP_CUDA_FEATURE_RUNTIME_API | SCOREP_CUDA_FEATURE_KERNEL | \
       SCOREP_CUDA_FEATURE_MEMCPY )
